[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/spider_small.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Spider.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.95836, 3.75795 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.5223, 3.14578 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.99785, 4.95768 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
frames = SubResource( 2 )

[node name="StompDetector" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
modulate = Color( 0.0352941, 0.0666667, 0.862745, 1 )
position = Vector2( 0, -3 )
shape = SubResource( 3 )

[node name="damageBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="damageBox"]
position = Vector2( 0, -1 )
shape = SubResource( 4 )

[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="area_entered" from="damageBox" to="." method="_on_damageBox_area_entered"]
